--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="uz">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Mutola.uz — Raqamli Kutubxona</title>
+    <meta name="description" content="Mutola.uz — elektron kitoblar platformasi. Istalgan vaqt, istalgan joyda o'qing." />
+    <meta name="author" content="Mutola.uz" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
+
+    <meta property="og:title" content="Mutola.uz — Raqamli Kutubxona" />
+    <meta property="og:description" content="Elektron kitoblar platformasi. Istalgan vaqt, istalgan joyda o'qing." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Mutola.uz — Raqamli Kutubxona" />
+    <meta name="twitter:description" content="Elektron kitoblar platformasi. Istalgan vaqt, istalgan joyda o'qing." />
   </head>
 
   <body>
